<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background = "@drawable/gradient_drawable"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin" >
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/graph" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/forgot_your_password"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/forget_password_description" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="sample@mail.com"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/send_OTP" />

</LinearLayout>