<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_profile1"
            android:paddingTop="50dp"
            android:paddingBottom="30dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile_img2"></ImageView>

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/student_username"
                    android:textColor="@color/textBlack"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="Student number - IT21246296" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ProfileEditButton"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_selector_grey"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/edit_profile" />
            </LinearLayout>
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textView1"
            android:layout_marginTop="10dp"
            android:columnCount="3"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:text="Enrolled \ncourses"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="center"
                        android:text="34"
                        android:textSize="34sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:text="Earned \nPoints"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="center"
                        android:text="128"
                        android:textSize="34sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:src="@drawable/baseline_school_24"></ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/std_university"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="Sri lankan institute of information technology"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:src="@drawable/baseline_email_24"></ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/std_email"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="Jathurshanm3@gmail.com"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:src="@drawable/baseline_phone_24"></ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/std_mobile"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="+94773640636"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/logout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteAccount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selector_red"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/delete_account"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>